--- a/i3/config
+++ b/i3/config
@@ -228,8 +228,8 @@ bindsym XF86MonBrightnessDown exec light -U 1 # decrease screen brightness
 bindsym XF86TouchpadToggle exec /home/vathsa/.toggletouchpad.sh # toggle touchpad
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
