--- a/i3/config
+++ b/i3/config
@@ -40,8 +40,9 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # i3-gaps
-gaps inner 5
-gaps outer 5
+#border_radius 4
+gaps inner 10
+gaps outer 1
 for_window [class="^.*"] border pixel 2
 
 # start a terminal
