--- a/terminator/config
+++ b/terminator/config
@@ -1,16 +1,19 @@
 [global_config]
   borderless = True
+  title_transmit_bg_color = "#ffffff"
   title_use_system_font = False
   title_font = SF Pro Display 10
 [keybindings]
 [profiles]
   [[default]]
-    background_color = "#2e3436"
+    background_color = "#002b36"
     background_darkness = 1.0
     background_type = transparent
+    cursor_shape = ibeam
     cursor_color = "#aaaaaa"
     font = SF Mono 15
-    foreground_color = "#ffffff"
+    foreground_color = "#839496"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     use_system_font = False
 [layouts]
   [[default]]
