--- a/i3/config
+++ b/i3/config
@@ -199,22 +199,22 @@ client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 
 client.background       #F8F8F2
 
-bar {
-  status_command i3status
-  position top
-  separator_symbol ⁞
-  colors {
-    background #282A36
-    statusline #F8F8F2
-    separator  #44475A
-
-    focused_workspace  #44475A #44475A #F8F8F2
-    active_workspace   #282A36 #44475A #F8F8F2
-    inactive_workspace #282A36 #282A36 #BFBFBF
-    urgent_workspace   #FF5555 #FF5555 #F8F8F2
-    binding_mode       #FF5555 #FF5555 #F8F8F2
-  }
-}
+#bar {
+#  status_command i3status
+#  position top
+#  separator_symbol ⁞
+#  colors {
+#    background #282A36
+#    statusline #F8F8F2
+#    separator  #44475A
+#
+#    focused_workspace  #44475A #44475A #F8F8F2
+#    active_workspace   #282A36 #44475A #F8F8F2
+#    inactive_workspace #282A36 #282A36 #BFBFBF
+#    urgent_workspace   #FF5555 #FF5555 #F8F8F2
+#    binding_mode       #FF5555 #FF5555 #F8F8F2
+#  }
+#}
 
 hide_edge_borders both
 
@@ -240,6 +240,7 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym $mod+Control+l exec i3lock
 
 # Startup commands
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
 exec_always feh --bg-scale /home/vathsa/Pictures/wallpaperbetter.com_1920x1080.jpg
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Tapping Enabled" 1
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Natural Scrolling Enabled" 1
