--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -52,7 +52,8 @@ font-0 = monospace:pixelsize=10;2
 font-1 = Font Awesome 6 Free Regular:size=10;1
 font-2 = Font Awesome 6 Brands:size=10;1
 
-modules-left = xworkspaces xwindow
+modules-left = xworkspaces
+modules-center = xwindow 
 modules-right = pulseaudio memory cpu wlan date
 
 cursor-click = pointer
@@ -68,6 +69,33 @@ enable-ipc = true
 
 ; override-redirect = true
 
+[module/spotify]
+type = custom/script
+tail = true
+interval = 1
+; prefix symbol is shown before the text
+format-prefix = 
+format = <label>
+exec = ~/.config/polybar/scripts/scroll_spotify_status.sh
+
+[module/spotify-prev]
+type = custom/script
+exec = echo ""
+format = <label>
+click-left = playerctl previous -p spotify
+
+[module/spotify-play-pause]
+type = custom/ipc
+hook-0 = echo "<playing-symbol>"
+hook-1 = echo "<pause-symbol>"
+initial = 1
+click-left = playerctl play-pause -p spotify
+
+[module/spotify-next]
+type = custom/script
+exec = echo "next-song-symbol"
+format = <label>
+click-left = playerctl next -p spotify
 [module/xworkspaces]
 type = internal/xworkspaces
 
