--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -54,7 +54,7 @@ font-2 = Font Awesome 6 Brands:size=10;1
 
 modules-left = xworkspaces
 modules-center = xwindow 
-modules-right = pulseaudio memory cpu wlan date
+modules-right = pulseaudio memory cpu battery wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -68,6 +68,37 @@ enable-ipc = true
 ; wm-restack = i3
 
 ; override-redirect = true
+
+[module/battery]
+type = internal/battery
+full-at = 99 
+low-at = 10
+battery = BAT0
+adapter = ADP1
+poll-interval = 5
+time-format = %H:%M
+format-prefix = BAT
+format-discharging = <animation-discharging> <label-discharging>
+format-charging = <animation-charging> <label-charging>
+label-charging = Charging %percentage%%
+label-discharging = Discharging %percentage%%
+label-full = Fully charged
+label-low = BATTERY LOW
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+; Framerate in milliseconds
+animation-discharging-framerate = 500
 
 [module/spotify]
 type = custom/script
