--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ floating_modifier $mod
 
 # i3-gaps
 #border_radius 4
-gaps inner 7 
+gaps inner 15
 gaps outer 1
 for_window [class="^.*"] border pixel 2
 
@@ -262,5 +262,6 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always feh --bg-scale /home/vathsa/Pictures/wallpaperbetter.com_1920x1080.jpg
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Tapping Enabled" 1
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Natural Scrolling Enabled" 1
+exec_always alsactl restore
 exec spotify
 exec obsidian
