--- a/i3/config
+++ b/i3/config
@@ -151,11 +151,12 @@ bindsym $mod+Prior workspace prev
 # default workspaces
 for_window [class="Spotify"] move container to workspace $ws10
 for_window [class="firefox"] move container to workspace $ws1
-for_window [class="Code"] move container to workspace $ws3
-for_window [class="Org.gnome.Nautilus"] move container to workspace $ws4
+#for_window [class="Code"] move container to workspace $ws3
+#for_window [class="Org.gnome.Nautilus"] move container to workspace $ws4
 for_window [class="okular"] move container to workspace $ws5
 for_window [class="obsidian"] move container to workspace $ws2
 for_window [class="Anki"] move container to workspace $ws2
+for_window [class="calibre"] move container to workspace $ws5
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -172,10 +173,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -242,6 +243,7 @@ mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
 }
 
 bindsym $mod+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
+bindsym $mod+Print exec gnome-screenshot -i 
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec light -A 1 # increase screen brightness
