--- a/terminator/config
+++ b/terminator/config
@@ -2,6 +2,7 @@
   borderless = True
   title_transmit_bg_color = "#ffffff"
   enabled_plugins = LaunchpadBugURLHandler, LaunchpadCodeURLHandler, APTURLHandler, TerminatorThemes
+  suppress_multiple_term_dialog = True
   title_use_system_font = False
   title_font = SF Pro Display 10
 [keybindings]
