--- a/i3/config
+++ b/i3/config
@@ -43,7 +43,7 @@ floating_modifier $mod
 #border_radius 4
 gaps inner 15
 gaps outer 1
-for_window [class="^.*"] border pixel 2
+for_window [class="^.*"] border pixel 1
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -110,11 +110,11 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1|Firefox " 
-set $ws2 "2|Notes" 
-set $ws3 "3|Editor "
-set $ws4 "4|Explorer "
-set $ws5 "5|Reading"
+set $ws1 "1 | Firefox " 
+set $ws2 "2 | Notes" 
+set $ws3 "3 | Editor "
+set $ws4 "4 | Explorer "
+set $ws5 "5 | Reading"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -262,7 +262,7 @@ bindsym $mod+Control+l exec i3lock
 
 # Startup commands
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
-exec_always feh --bg-scale /home/vathsa/Pictures/wallpaperbetter.com_1920x1080.jpg
+exec_always feh --bg-scale /home/vathsa/Pictures/Wallpapers/orphans.png
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Tapping Enabled" 1
 exec_always xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Natural Scrolling Enabled" 1
 exec_always alsactl restore
