--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,7 +17,8 @@
 ;==========================================================
 
 [colors]
-background = #24283b 
+; background = #24283b 
+background = #990B1319
 background-alt = #373B41
 foreground = #C5C8C6
 primary = #F0C674
@@ -37,8 +38,8 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = #00000000
+border-size = 0pt
+border-color = #A6AEAA
 
 padding-left = 0
 padding-right = 1
@@ -48,7 +49,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace:pixelsize=10;2
+font-0 = SF Pro Display:pixelsize=12:weight=2;2
 font-1 = Font Awesome 6 Free Regular:size=10;1
 font-2 = Font Awesome 6 Brands:size=10;1
 
